# G0Z39a

./: .dockerignore  .gitignore  Dockerfile  IDEAS.md  Makefile  README.md  pyproject.toml  requirements-app-only.in  requirements-app-only.txt  requirements-app.in  requirements-app.txt  requirements.in  requirements.txt  setup.cfg
datasets/reduced/: population.csv
notebooks/: 1_Intro.ipynb  2_Government_response.ipynb  2_Vaccinations.ipynb  4_Reduced_model.ipynb  M_final_model.ipynb  N_model_build.ipynb  O_final_model.ipynb  P_reduced_model.ipynb  Report.ipynb  covid19.ipynb  feature_extraction.ipynb  neo.ipynb  preprocessing.ipynb  test_forecasting.ipynb  test_orbit.ipynb  test_sktime.ipynb
src/nepal/: __init__.py
src/nepal/app/: app.py
src/nepal/app/components/: __init__.py  description.py  map.py  navigation.py  sliders.py
src/nepal/app/data/: __init__.py  master.py  predictions.py  reduced.py
src/nepal/datasets/: __init__.py  base.py  config.py  counties.py  countydistance.py  governmentresponse.py  nytimes.py  vaccinations.py
src/nepal/datasets/util/: progressbar.py
src/nepal/graph/: __init__.py  connection.py  process.py
src/nepal/graph/gds/: __init__.py  embedding.py
src/nepal/graph/model/: __init__.py  base.py  county.py  date.py  nodes.py  state.py
src/nepal/ml/: forecaster.py  loss.py  preprocess.py  profile_run.py  run.py  splitter.py  transformers.py  validate.py
src/nepal/ml/features/: embedding.py  preprocess.py
src/nepal/ml/transformers/: __init__.py  (+3 more)
tests/nepal/graph/: test_connection.py
tests/nepal/ml/: test_transformers.py
