[build-system]
requires = ["setuptools>=42"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 96
target-version = ["py39", "py310"]
extend_exclude = '''
/(
    \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | \.env
  | _build
  | buck-out
  | build
  | dist
  | .vscode
  | .idea
  | dev
  | .coverage
)/
'''

[tool.isort]
profile = "black"
line_length = 96
src_paths = ["src"]
py_version = 39
skip_gitignore = true

[tool.mypy]
python_version = 3.9
strict = true
ignore_missing_imports = true
warn_unused_ignores = true

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
testpaths = [
    "tests",
]
