[metadata]
name = mda-nepal
version = 0.0.1
author = Lieven Verswyvel
author_email = lieven.verswyvel@student.kuleuven.be
description = Package for the MDA project of Team Nepal
long_description = file: README.md
long_description_content_type = text/markdown
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Framework :: Jupyter

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.9

[options.packages.find]
where = src
